--- a/index.html
+++ b/index.html
@@ -17,6 +17,47 @@
       const victoireResponse = await fetch("./victoireApres2002.json");
       const victoire = await victoireResponse.json();
       console.log(victoire);
+
+      const plot = Plot.plot({
+        x: { grid: true, label: "Années" },
+        y: { grid: true, label: "Gains en euros" },
+        color: { legend: true },
+        title: "Evolution des gains du vainqueur du grand chelem",
+        subtitle: "Evoluiton des gains en euros du grand chelem de 1968 à 2022",
+        marginLeft: 55,
+        marks: [
+          Plot.lineY(data, {
+            x: "YEAR",
+            y: "WINNER_PRIZE",
+            stroke: "TOURNAMENT",
+            tip: true,
+          }),
+        ],
+      });
+
+      const div = document.querySelector("#graph1");
+      div.append(plot);
+
+      const plot2 = Plot.plot({
+        x: { label: "Tournoi" },
+        y: { grid: true, label: "Vainceur" },
+        color: { legend: true },
+        title: "Domination du Big three de 2002 à 2023",
+        subtitle: "Nombre de victoire par tournoi en fonction des joeuurs",
+        marginLeft: 140,
+        marks: [
+          Plot.dot(
+            victoire,
+            Plot.group(
+              { r: "count" },
+              { x: "TOURNAMENT", y: "WINNER", stroke: "TOURNAMENT", tip: true }
+            )
+          ),
+        ],
+      });
+
+      const div2 = document.querySelector("#graph2");
+      div2.append(plot2);
     </script>
     <header>
       <nav>
