--- a/index.html
+++ b/index.html
@@ -47,15 +47,10 @@
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
 
     <script>
-      
       (async () => {
         const dataResponse = await fetch("./dataCorected.json");
         const data = await dataResponse.json();
         console.log(data);
-
-        const victoireResponse = await fetch("./victoireApres2002.json");
-        const victoire = await victoireResponse.json();
-        console.log(victoire);
 
         const plot = Plot.plot({
           x: { grid: true, label: "Années" },
@@ -77,7 +72,14 @@
 
         const div = document.querySelector("#graph1");
         div.append(plot);
+      })();
 
+      (async () => {
+
+        const victoireResponse = await fetch("./victoireApres2002.json");
+        const victoire = await victoireResponse.json();
+        
+        console.log(victoire);
         const plot2 = Plot.plot({
           x: { label: "Tournoi" },
           y: { grid: true, label: "Vainceur" },
